# gnatsgo

./: README-template.md  README.md  docker_env  environment.yml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  Dockerfile-dev
docs/: installation_and_basic_usage.ipynb
examples/: chorizon.json  collection.json  conus_101445_1580705_265285_1416865.json  conus_920645_925345_1084485_761505.json
src/stactools/gnatsgo/: __init__.py  commands.py  constants.py  stac.py  utils.py
tests/: test_commands.py  test_module.py  test_stac.py
