[metadata]
name = stactools-gnatsgo
version = attr: stactools.gnatsgo.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/gnatsgo
project_urls =
    Documentation = https://stactools-gnatsgo.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/gnatsgo/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools == 0.2.1
    stac_table @ git+https://github.com/TomAugspurger/stac-table.git@ee2d8549825a85df6ff40ebb2a5a3342f961228c

[options.packages.find]
where = src
